MySQL CNID Backend: improve performance, TCP support, and test container config
- Enable TCP_NODELAY for MySQL/MariaDB TCP connections to reduce query latency
- Reduce connection/read/write timeouts from 600s to 30s
- Set UTF-8 charset (utf8mb4) at connection time for UTF-8 volumes (avoid repeated dynamic detection overhead)
- Add improved logging for connection info and table creation
- Enhanced Docker entrypoint to support MySQL/MariaDB testing via TCP and Socket
- Add mariadb package to Alpine testsuite Dockerfile
- Update afp.conf documentation for MySQL backend options

--- a/.github/workflows/containers.yml
+++ b/.github/workflows/containers.yml
@@ -252,6 +252,7 @@ jobs:
               -e DISABLE_TIMEMACHINE=1 \
               -e AFP_EXTMAP=1 \
               -e AFP_CNID_SQL_HOST=mariadb \
+              -e AFP_CNID_SQL_USER=root \
               -e AFP_CNID_SQL_PASS="$DB_PASSWD" \
               -e AFP_DIRCACHESIZE=131072 \
               -e AFP_DIRCACHE_VALIDATION_FREQ=100 \
@@ -367,6 +368,7 @@ jobs:
               -e AFP_REMOTE=1 \
               -e AFP_EXTMAP=1 \
               -e AFP_CNID_SQL_HOST=mariadb \
+              -e AFP_CNID_SQL_USER=root \
               -e AFP_CNID_SQL_PASS="$DB_PASSWD" \
               ${{ env.REGISTRY }}/netatalk/netatalk-testsuite-debian:${{ github.sha }}
 
